<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_background" >
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">
        <LinearLayout 
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical" 	>
            <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textColor="#93552e"
		        android:textSize="20sp"
		        android:padding="10dp"
		        android:background="#70000000"
		        android:text="@string/imagelistmain_explain"
	        />
		    <Button
		       android:id="@+id/picturemain_button_open1"
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:layout_margin="10dp" 
		       android:padding="5dp"
		       android:textColor="#ffffff"
		       android:textSize="15sp"
		       android:background="#70000000"
		       android:text="@string/imagelistmain_explain1"
		       />
		    <Button
		       android:id="@+id/picturemain_button_open2"
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:layout_margin="10dp" 
		       android:padding="5dp"
		       android:textColor="#ffffff"
		       android:textSize="15sp"
		       android:background="#70000000"
		       android:text="@string/imagelistmain_explain2"
		       />
        </LinearLayout>
    </ScrollView>
    <Button
       android:id="@+id/picturemain_button_back"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="10dp" 
       android:layout_gravity="right|bottom"
       android:paddingLeft="40dp"
       android:paddingRight="20dp"
       android:paddingTop="10dp"
       android:paddingBottom="10dp"
       android:textColor="#ffffff"
       android:textSize="30sp"
       android:background="#70000000"
       android:text="@string/name_back" />
</LinearLayout>