<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_background" >
    <RelativeLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:background="#70000000"
    	android:layout_marginLeft="10dp"
    	android:layout_marginTop="10dp"
    	android:layout_marginRight="10dp">
        <TextView 
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_centerHorizontal="true"
    		android:layout_centerVertical="true"
    		android:textColor="#ffffff"
    		android:textSize="28sp"
    		android:text="@string/tool_xinlv" />
        <ImageButton
            android:id="@+id/tool_xinlv_back"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_alignParentRight="true"
    		android:layout_centerVertical="true"
    		android:padding="10dp"
    		android:background="#00000000"
    		android:src="@drawable/icon_back"/>"
    </RelativeLayout>
    <ScrollView 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_weight="1"
    	android:layout_margin="10dp">
		<LinearLayout 
		    android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:background="#70000000"
	    	android:cacheColorHint="#00000000"
			android:scrollbars="none"
			android:orientation="vertical">
		    <LinearLayout 
		        android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:padding="5dp">
		        <TextView 
		            android:layout_width="wrap_content"
	    			android:layout_height="wrap_content"
	    			android:textColor="#ffffff"
	    			android:textSize="18sp"
	    			android:text="@string/name_age"/>
		        <EditText 
		            android:id="@+id/tool_xinlv_age"
		            android:layout_width="fill_parent"
	    			android:layout_height="wrap_content"
	    			android:layout_weight="1"
	    			android:inputType="number" />
		        <TextView 
		            android:layout_width="wrap_content"
	    			android:layout_height="wrap_content"
	    			android:textColor="#ffffff"
	    			android:textSize="18sp"
	    			android:text="@string/name_sui"/>
		    </LinearLayout>
		    <Button 
		        android:id="@+id/tool_xinlv_calculate"
		        android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:textColor="#ffffff"
	    		android:textSize="20sp"
	    		android:paddingLeft="20dp"
	    		android:paddingRight="20dp"
	    		android:paddingTop="10dp"
	    		android:paddingBottom="10dp"
	    		android:layout_gravity="center_horizontal"
	    		android:background="#70000000"
	    		android:text="@string/name_calculate"/>
		    <LinearLayout 
		        android:id="@+id/tool_xinlv_resaultplan"
		        android:layout_width="fill_parent"
	   			android:layout_height="wrap_content"
	   			android:layout_gravity="center_horizontal"
	   			android:layout_marginTop="5dp"
	   			android:layout_marginBottom="5dp"
	   			android:visibility="gone"
		   		android:background="#70ffffff"
		   		android:orientation="vertical" >"
		        <TextView 
		            android:layout_width="wrap_content"
		   			android:layout_height="wrap_content"
		   			android:padding="5dp"
		   			android:textColor="#99d5ff"
		   			android:textSize="13sp"
		   			android:layout_gravity="center_vertical|center_horizontal"
		   			android:text="@string/tool_xinlv_resault1"/>
		        <LinearLayout 
		            android:layout_width="wrap_content"
		   			android:layout_height="wrap_content"
		   			android:layout_gravity="center_vertical|center_horizontal">
			        <TextView 
			            android:id="@+id/tool_xinlv_resault1"
			            android:layout_width="wrap_content"
			   			android:layout_height="wrap_content"
			   			android:padding="5dp"
			   			android:layout_gravity="center_vertical|center_horizontal"
			   			android:textColor="#ffa729"
			   			android:textSize="18sp"/>
			        <TextView 
			            android:layout_width="wrap_content"
			   			android:layout_height="wrap_content"
			   			android:padding="5dp"
			   			android:textColor="#99d5ff"
			   			android:textSize="13sp"
			   			android:layout_gravity="center_vertical|center_horizontal"
			   			android:text="@string/tool_xinlv_resault2"/>
			        <TextView 
			            android:id="@+id/tool_xinlv_resault2"
			            android:layout_width="wrap_content"
			   			android:layout_height="wrap_content"
			   			android:padding="5dp"
			   			android:layout_gravity="center_vertical|center_horizontal"
			   			android:textColor="#ffa729"
			   			android:textSize="18sp"/>
			        <TextView 
			            android:layout_width="wrap_content"
			   			android:layout_height="wrap_content"
			   			android:padding="5dp"
			   			android:textColor="#99d5ff"
			   			android:textSize="13sp"
			   			android:layout_gravity="center_vertical|center_horizontal"
			   			android:text="@string/tool_xinlv_resault3"/>
			    </LinearLayout>
		    </LinearLayout>
		    <TextView 
	            android:layout_width="fill_parent"
	   			android:layout_height="wrap_content"
	   			android:padding="5dp"
	   			android:textColor="#ffffff"
	   			android:textSize="13sp"
	   			android:text="@string/tool_xinlv_explain"/>
		</LinearLayout>
	</ScrollView>
</LinearLayout>